[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Enemy_Abilities/boss_cone_warning.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemy_Abilities/boss_cone_activated.png" type="Texture" id=2]
[ext_resource path="res://Enemy_Elements/Boss_Abilities/BossAttack5.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Warning",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Active",
"speed": 5.0
} ]

[node name="BossAttack5" type="Area2D"]
scale = Vector2( 15, 20 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Warning"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, -8, 8, -8, 8, -6, 7, -6, 7, -4, 6, -4, 6, -2, 5, -2, 5, 1, 4, 1, 4, 3, 3, 3, 3, 5, 2, 5, 2, 7, 1, 7, 1, 8, -1, 8, -1, 7, -2, 7, -2, 5, -3, 5, -3, 3, -4, 3, -4, 1, -5, 1, -5, -2, -6, -2, -6, -4, -7, -4, -7, -6, -8, -6 )
disabled = true

[node name="WarningTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_BossAttack5_body_entered"]
[connection signal="timeout" from="WarningTimer" to="." method="_on_WarningTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
